--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Web Portfolio"
 APP_ENV=local
 APP_KEY=base64:gQmymg0NuufN1tmSZ9NaeHv0Yu1KSIjoUES6JB0wh70=
 APP_DEBUG=true
@@ -47,12 +47,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
+MAIL_MAILER=smtp
 MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=myreadix@gmail.com
+MAIL_ENCRYPTION=tls
+MAIL_PASSWORD="nvep lcnz udrk dygx"
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
@@ -63,3 +64,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+VITE_WHATSAPP_NUMBER=6285966688711
+
+ADMIN_EMAIL="justinereifanwijaya@gmail.com"
